--- a/React Native/Projetos/aula5/MyFriends/package.json
+++ b/React Native/Projetos/aula5/MyFriends/package.json
@@ -1,6 +1,4 @@
 {
-  "name": "myfriends",
-  "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -13,7 +11,7 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
     "axios": "^0.26.1",
-    "expo": "^44.0.0",
+    "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
